--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,3 +1,8 @@
 {
-	"plugins": ["perttier-plugin-tailwindcss"]
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
